test_suite/tests/compile_error_cases/duplicate_attr_3.rs
#[moq::automock]
trait Trait {
    #[moq(default = 1, default = 2)]
    const CONST: i32;
}

fn main() {}
